la till rubrik bild gör ditt val på startsida samt fixat länkar från logga till startsida från samtilga sidor

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </ul>
     </nav>
 
-    <a href="generator.html" class="logo-link">
+    <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
