--- a/startsida2.html
+++ b/startsida2.html
@@ -117,7 +117,7 @@
         </ul>
     </nav>
 
-    <a href="generator.html" class="logo-link">
+    <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
@@ -134,6 +134,8 @@
             <p style="margin-top: 0; margin-bottom: 1em;">Ange dina ingredienser och låt oss visa vägen till nya smarriga måltider som väntar på att bli tillagade.</p>
             <p style="margin-top: 0;">Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
         </div>
+
+        <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image">
 
         <div class="image-links">
             <a href="generator.html">
