--- a/startsida2.html
+++ b/startsida2.html
@@ -146,7 +146,7 @@
             </a>
         </div>
 
-        <img src="images/divider/scribble.svg" alt="Dekorativ divider" class="image-divider">
+        <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider">
 
         <!-- Plats för matdagarnas innehåll -->
         <div id="foodDayContainer">
