--- a/startsida2.html
+++ b/startsida2.html
@@ -131,7 +131,7 @@
             <h1 style="margin-bottom: 0.5em;">Välkommen till Instarecept!</h1>
             <p style="margin-top: 0; margin-bottom: 1em;">Vi förenklar sökandet efter Instagrams bästa recept.</p>
             <p style="margin-top: 0; margin-bottom: 1em;">Välj <strong>Mat-Generatorn</strong> för att hitta recept genom kategorier eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta måltider baserade på Dina ingredienser.</p>
-            Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
+            Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och få mer inspiration från Sveriges bästa matlagare. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
         </div>
 
         <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image">
