testar ny css på ingrediensassistentens sökruta

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
     </div> -->
+    <div class="top-space"></div>
 
     <div class="search-container">
         <!-- Ny slider här 
