--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
+  
+
     <div class="background-container"></div>
 
     <!-- Logotyp Container -->
@@ -134,6 +136,11 @@
 
     </div> -->
     <div class="top-space"></div>
+
+      <!-- Ny bild för text under logotypen -->
+      <div class="text-image">
+        <img src="images/Ingrediens-assistenten-text.svg" alt="Text Image">
+    </div>
 
     <div class="search-container">
         <!-- Ny slider här 
