--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <!-- Sökfält och knappar -->
         <div class="input-button-container">
-            <input type="text" id="searchInput" placeholder="Skriv 1 ingrediens & tryck Enter...">
+            <input type="text" id="searchInput" placeholder="Skriv 1 ingrediens o tryck Enter...">
             <button onclick="addTagFromButton()" class="add-button">
                 <img src="images/knifeforksign.jpg
                 " alt="Add" />
