--- a/generator.html
+++ b/generator.html
@@ -120,7 +120,10 @@
 
     <div class="background-container"></div>
 
-   
+    <!-- Ny bild för text under logotypen -->
+    <div class="text-image">
+        <img src="images/matgeneratorn-text.svg" alt="Text Image">
+    </div>
 
 
         <div class="category-header">
