--- a/startsida2.html
+++ b/startsida2.html
@@ -159,7 +159,7 @@
 
         <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
-        <img src="images/divider/scribble1.svg" alt="Dekorativ divider" class="image-divider">
+       <!-- <img src="images/divider/scribble1.svg" alt="Dekorativ divider" class="image-divider"> -->
 
 
 
