--- a/startsida2.html
+++ b/startsida2.html
@@ -125,6 +125,13 @@
 
     <div class="background-container"></div>
 
+    <div class="video-container">
+        <video autoplay loop muted playsinline>
+            <source src="images/videos/videos startsida/Dags för ny mat-inspo.mp4" type="video/mp4">
+            Din webbläsare stöder inte videouppspelning.
+        </video>
+    </div>
+
     <div class="welcome-text">
 
         <div style="text-align: left; padding: 20px;">
