--- a/startsida2.html
+++ b/startsida2.html
@@ -127,9 +127,9 @@
 
     <div class="video-container">
         <video autoplay loop muted playsinline>
-            <source src="images/videos/videos startsida/Dags för ny mat-inspo.mp4" type="video/mp4">
+            <source src="images/videos/videos startsida/dagsfornymat.mp4" type="video/mp4">
             Din webbläsare stöder inte videouppspelning.
-        </video>
+        </video> 
     </div>
 
     <div class="welcome-text">
