--- a/startsida2.html
+++ b/startsida2.html
@@ -133,13 +133,14 @@
     </div>
 
     <div class="welcome-text">
-
-        <div style="text-align: left; padding: 20px;">
-            <h1 style="margin-bottom: 0.5em;">Välkommen till Instarecept!</h1>
-            <p style="margin-top: 0; margin-bottom: 1em;">Vi förenklar sökandet efter Instagrams bästa recept.</p>
-            <p style="margin-top: 0; margin-bottom: 1em;">Välj <strong>Mat-Generatorn</strong> för att hitta recept genom kategorier eller använd <strong>Ingrediens-Assistenten</strong> för att hitta måltider baserade på ditt val av ingredienser.</p>
-            Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och få mer inspiration från Sveriges bästa matlagare. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
-        </div>
+        <h1>Välkommen till Instarecept!</h1>
+        <p>Vi gör det enklare att hitta och utforska Instagrams bästa recept. Vare sig du är ute efter inspiration via <strong>Mat-Generatorn</strong> eller vill hitta rätter baserat på specifika ingredienser med <strong>Ingrediens-Assistenten</strong>, har vi verktygen för dig.</p>
+        <p>Alla recept och bilder är upphovsrättsligt skyddade av deras skapare. Vi vill uppmuntra stöd och erkännande av originalkockarna. För att ta del av hela recepten, klicka på inläggen för att direkt nå skaparnas Instagram-profiler.</p>
+        <p class="copyright-notice">Observera att allt innehåll, inklusive bilder och recept, är äganderätt av dess ursprungliga skapare. Besök deras Instagram-profiler för komplett information och för att stödja deras fantastiska arbete.</p>
+        <a href="#" class="learn-more">Läs mer...</a>
+    </div>
+    
+    
 
         <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image">
 
