--- a/startsida2.html
+++ b/startsida2.html
@@ -126,11 +126,11 @@
     <div class="background-container"></div>
 
     <div class="video-container">
-        <video autoplay loop muted playsinline>
-            <source src="images/videos/videos startsida/dagsfornymat.mp4" type="video/mp4">
+        <video id="randomVideo" autoplay loop muted playsinline>
             Din webbläsare stöder inte videouppspelning.
         </video> 
     </div>
+    
 
     <div class="welcome-text">
         <h1>Välkommen till Instarecept!</h1>
@@ -169,6 +169,7 @@
 
        <!-- <img src="images/divider/scribble1.svg" alt="Dekorativ divider" class="image-divider"> -->
 
+       <script src="startsida.js"></script>
 
 
 
