--- a/startsida2.html
+++ b/startsida2.html
@@ -108,7 +108,7 @@
                 </a>
             </li> -->
             <li class="nav__item">
-                <a href="#hoi" class="nav__link">
+                <a href="contact.html" class="nav__link">
                     <span class="nav__text">
                         Kontakt
                     </span>
