--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
     <link rel="stylesheet" href="startsida-image-links.css">
+    <link rel="stylesheet" href="contact.css">
 
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
