--- a/startsida2.html
+++ b/startsida2.html
@@ -125,11 +125,10 @@
 
     <div class="background-container"></div>
 
-    <div class="video-container">
-        <video id="randomVideo" autoplay loop muted playsinline>
-            Din webbläsare stöder inte videouppspelning.
-        </video> 
-    </div>
+    <video id="randomVideo" autoplay loop muted playsinline preload="auto">
+        Din webbläsare stöder inte videouppspelning.
+    </video>
+    
     
 
     <div class="welcome-text">
