--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,11 @@
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
+    <!-- Bild för text under logotypen -->
+    <div class="text-image">
+        <img src="images/kontaktaossrubrik.svg" alt="Text Image">
+    </div>
+
     <div class="contact-container">
         <h1>Kontakta Oss</h1>
         <form id="contactForm">
