--- a/generator.html
+++ b/generator.html
@@ -125,191 +125,195 @@
         <img src="images/matgeneratorn-text.svg" alt="Text Image">
     </div>
 
+    <div class="welcome-text">
+        <h1></h1>
+        <p>Välj 1 eller flera Mattyper, en eller flera proteinkällor och en eller flera länder/världsdelar. Klicka sedan på<strong>sök</strong> för att få fram recept som stämmer med dina val. <strong>Om du t.ex. valt</strong> soppa och förätt och sedan fisk och vegetariskt så kommer resultaten kanske att vara en fisksoppa och en vegetarisk förätt</p>
+    </div>
 
-        <div class="category-header">
-            <img src="images/rubrik bilder/mattyp7.svg" alt="Typ av Mat" class="category-image" />
+    <div class="category-header">
+        <img src="images/rubrik bilder/mattyp7.svg" alt="Typ av Mat" class="category-image" />
+    </div>
+    <!-- Sökfilter Knappar -->
+    <!-- Filter Knappar -->
+    <div class="filter-container" id="mealtype">
+        <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
+            <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="lunchmiddag" />
         </div>
-        <!-- Sökfilter Knappar -->
-        <!-- Filter Knappar -->
-        <div class="filter-container" id="mealtype">
-            <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
-                <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="lunchmiddag" />
-            </div>
-            <div class="image-button" data-category="mealtype" data-filter="pasta">
-                <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
-            </div>
-            <div class="image-button" data-category="mealtype" data-filter="forattertilltugg">
-                <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
-            </div>
-            <div class="image-button" data-category="mealtype" data-filter="streetfood">
-                <img src="images/knappargenerator/knappar/streetfood.png" alt="Streetfood" />
-            </div>
-            <!-- Dolda knappar som visas när "Visa fler" klickas -->
-            <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
-                <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frukost Brunch" />
-            </div>
-            <div class="image-button hidden" data-category="mealtype" data-filter="barnvanligt">
-                <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Barnvänligt" />
-            </div>
-            <div class="image-button hidden" data-category="mealtype" data-filter="soppa">
-                <img src="images/knappargenerator/knappar/soppa.png" alt="Soppa" />
-            </div>
-            <div class="image-button hidden" data-category="mealtype" data-filter="sallad">
-                <img src="images/knappargenerator/knappar/sallad.png" alt="Sallad" />
-            </div>
-            <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
-                <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
-            </div>
-            <div class="image-button hidden" data-category="mealtype" data-filter="efterattfika">
-                <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
-            </div>
-            <!-- Lägg till fler dolda knappar efter behov -->
-
-            <!-- Lägg till en "Visa fler"-knapp här -->
-            <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div>
-
+        <div class="image-button" data-category="mealtype" data-filter="pasta">
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
         </div>
-
-        <!-- Divider efter första kategorin och före den andra kategorin -->
-        <div class="divider-container">
-            <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+        <div class="image-button" data-category="mealtype" data-filter="forattertilltugg">
+            <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
         </div>
-
-        <div class="category-header">
-            <img src="images/rubrik bilder/protein7.svg" alt="Protein" class="category-image" />
+        <div class="image-button" data-category="mealtype" data-filter="streetfood">
+            <img src="images/knappargenerator/knappar/streetfood.png" alt="Streetfood" />
         </div>
-        <!-- Sökfilter Knappar -->
-        <!-- Filter Knappar -->
-        <div class="filter-container" id="proteins">
-            <div class="image-button" data-category="protein" data-filter="not">
-                <img src="images/knappargenerator/knappar/not.png" alt="Nöt" />
-            </div>
-            <div class="image-button" data-category="protein" data-filter="fisk">
-                <img src="images/knappargenerator/knappar/fisk.png" alt="Fisk" />
-            </div>
-            <div class="image-button" data-category="protein" data-filter="fagel">
-                <img src="images/knappargenerator/knappar/fagel.png" alt="Fågel" />
-            </div>
-            <div class="image-button" data-category="protein" data-filter="flask">
-                <img src="images/knappargenerator/knappar/flask.png" alt="Fläsk" />
-            </div>
-            <!-- Dolda knappar som visas när "Visa fler" klickas -->
-            <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
-                <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Vegetarisk" />
-            </div>
-            <div class="image-button hidden" data-category="protein" data-filter="vegansk">
-                <img src="images/knappargenerator/knappar/vegansk.png" alt="Vegansk" />
-            </div>
-            <div class="image-button hidden" data-category="protein" data-filter="skaldjur">
-                <img src="images/knappargenerator/knappar/skaldjur.png" alt="Skaldjur" />
-            </div>
-            <div class="image-button hidden" data-category="protein" data-filter="vilt">
-                <img src="images/knappargenerator/knappar/vilt.png" alt="Vilt" />
-            </div>
-            <div class="image-button hidden" data-category="protein" data-filter="lamm">
-                <img src="images/knappargenerator/knappar/lamm.png" alt="Lamm" />
-            </div>
-            <!-- Lägg till fler dolda knappar efter behov -->
-
-            <!-- Lägg till en "Visa fler"-knapp här -->
-            <div class="show-more-btn" data-target="proteins" data-expanded="false">Visa fler</div>
-
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
+            <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frukost Brunch" />
         </div>
-
-        <div class="divider-container">
-            <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+        <div class="image-button hidden" data-category="mealtype" data-filter="barnvanligt">
+            <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Barnvänligt" />
         </div>
-
-        <div class="category-header">
-            <img src="images/rubrik bilder/matfran7.svg" alt="Mat Från" class="category-image" />
+        <div class="image-button hidden" data-category="mealtype" data-filter="soppa">
+            <img src="images/knappargenerator/knappar/soppa.png" alt="Soppa" />
         </div>
-        <!-- Sökfilter Knappar -->
-        <!-- Filter Knappar -->
-        <div class="filter-container" id="countries">
-            <div class="image-button" data-category="country" data-filter="italien">
-                <img src="images/knappargenerator/knappar/italien.png" alt="Italien" />
-            </div>
-            <div class="image-button" data-category="country" data-filter="sverige">
-                <img src="images/knappargenerator/knappar/sverige.png" alt="Sverige" />
-            </div>
-            <div class="image-button" data-category="country" data-filter="japan">
-                <img src="images/knappargenerator/knappar/japan.png" alt="Japan" />
-            </div>
-            <div class="image-button" data-category="country" data-filter="indien">
-                <img src="images/knappargenerator/knappar/indien.png" alt="Indien" />
-            </div>
-            <!-- Dolda knappar som visas när "Visa fler" klickas -->
-            <div class="image-button hidden" data-category="country" data-filter="kina">
-                <img src="images/knappargenerator/knappar/kina.png" alt="Kina" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="thailand">
-                <img src="images/knappargenerator/knappar/thailand.png" alt="Thailand" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="korea">
-                <img src="images/knappargenerator/knappar/korea.png" alt="Korea" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="mexiko">
-                <img src="images/knappargenerator/knappar/mexiko.png" alt="Mexiko" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="frankrike">
-                <img src="images/knappargenerator/knappar/frankrike.png" alt="Frankrike" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="spanien">
-                <img src="images/knappargenerator/knappar/spanien.png" alt="Spanien" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="grekland">
-                <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="asien">
-                <img src="images/knappargenerator/knappar/asien.png" alt="Asien" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="europa">
-                <img src="images/knappargenerator/knappar/europa.png" alt="Europa" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="nordamerika">
-                <img src="images/knappargenerator/knappar/nordamerika.png" alt="Nordamerika" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="sydamerika">
-                <img src="images/knappargenerator/knappar/sydamerika.png" alt="Sydamerika" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="mellanostern">
-                <img src="images/knappargenerator/knappar/mellanostern.png" alt="Mellanöstern" />
-            </div>
-            <div class="image-button hidden" data-category="country" data-filter="afrika">
-                <img src="images/knappargenerator/knappar/afrika.png" alt="Afrika" />
-            </div>
-            <!-- Lägg till fler dolda knappar efter behov -->
-
-            <!-- Lägg till en "Visa fler"-knapp här -->
-            <div class="show-more-btn" data-target="countries" data-expanded="false">Visa fler</div>
-
+        <div class="image-button hidden" data-category="mealtype" data-filter="sallad">
+            <img src="images/knappargenerator/knappar/sallad.png" alt="Sallad" />
         </div>
+        <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
+            <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
+        </div>
+        <div class="image-button hidden" data-category="mealtype" data-filter="efterattfika">
+            <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div>
+
+    </div>
+
+    <!-- Divider efter första kategorin och före den andra kategorin -->
+    <div class="divider-container">
+        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+    </div>
+
+    <div class="category-header">
+        <img src="images/rubrik bilder/protein7.svg" alt="Protein" class="category-image" />
+    </div>
+    <!-- Sökfilter Knappar -->
+    <!-- Filter Knappar -->
+    <div class="filter-container" id="proteins">
+        <div class="image-button" data-category="protein" data-filter="not">
+            <img src="images/knappargenerator/knappar/not.png" alt="Nöt" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/fisk.png" alt="Fisk" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="fagel">
+            <img src="images/knappargenerator/knappar/fagel.png" alt="Fågel" />
+        </div>
+        <div class="image-button" data-category="protein" data-filter="flask">
+            <img src="images/knappargenerator/knappar/flask.png" alt="Fläsk" />
+        </div>
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
+            <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Vegetarisk" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="vegansk">
+            <img src="images/knappargenerator/knappar/vegansk.png" alt="Vegansk" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="skaldjur">
+            <img src="images/knappargenerator/knappar/skaldjur.png" alt="Skaldjur" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="vilt">
+            <img src="images/knappargenerator/knappar/vilt.png" alt="Vilt" />
+        </div>
+        <div class="image-button hidden" data-category="protein" data-filter="lamm">
+            <img src="images/knappargenerator/knappar/lamm.png" alt="Lamm" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <div class="show-more-btn" data-target="proteins" data-expanded="false">Visa fler</div>
+
+    </div>
+
+    <div class="divider-container">
+        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+    </div>
+
+    <div class="category-header">
+        <img src="images/rubrik bilder/matfran7.svg" alt="Mat Från" class="category-image" />
+    </div>
+    <!-- Sökfilter Knappar -->
+    <!-- Filter Knappar -->
+    <div class="filter-container" id="countries">
+        <div class="image-button" data-category="country" data-filter="italien">
+            <img src="images/knappargenerator/knappar/italien.png" alt="Italien" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="sverige">
+            <img src="images/knappargenerator/knappar/sverige.png" alt="Sverige" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="japan">
+            <img src="images/knappargenerator/knappar/japan.png" alt="Japan" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="indien">
+            <img src="images/knappargenerator/knappar/indien.png" alt="Indien" />
+        </div>
+        <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="country" data-filter="kina">
+            <img src="images/knappargenerator/knappar/kina.png" alt="Kina" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="thailand">
+            <img src="images/knappargenerator/knappar/thailand.png" alt="Thailand" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="korea">
+            <img src="images/knappargenerator/knappar/korea.png" alt="Korea" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="mexiko">
+            <img src="images/knappargenerator/knappar/mexiko.png" alt="Mexiko" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="frankrike">
+            <img src="images/knappargenerator/knappar/frankrike.png" alt="Frankrike" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="spanien">
+            <img src="images/knappargenerator/knappar/spanien.png" alt="Spanien" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="grekland">
+            <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="asien">
+            <img src="images/knappargenerator/knappar/asien.png" alt="Asien" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="europa">
+            <img src="images/knappargenerator/knappar/europa.png" alt="Europa" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="nordamerika">
+            <img src="images/knappargenerator/knappar/nordamerika.png" alt="Nordamerika" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="sydamerika">
+            <img src="images/knappargenerator/knappar/sydamerika.png" alt="Sydamerika" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="mellanostern">
+            <img src="images/knappargenerator/knappar/mellanostern.png" alt="Mellanöstern" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="afrika">
+            <img src="images/knappargenerator/knappar/afrika.png" alt="Afrika" />
+        </div>
+        <!-- Lägg till fler dolda knappar efter behov -->
+
+        <!-- Lägg till en "Visa fler"-knapp här -->
+        <div class="show-more-btn" data-target="countries" data-expanded="false">Visa fler</div>
+
+    </div>
 
 
 
 
 
 
-        <!-- Sök Knapp -->
-        <button id="searchBtn" class="big-button">Sök</button>
+    <!-- Sök Knapp -->
+    <button id="searchBtn" class="big-button">Sök</button>
 
-        <div id="results-container"></div>
-
-
-        <!-- Plats för att visa matchande Instagram-inlägg -->
-        <!-- <div id="instagram-results-container"></div> -->
+    <div id="results-container"></div>
 
 
-        <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
+    <!-- Plats för att visa matchande Instagram-inlägg -->
+    <!-- <div id="instagram-results-container"></div> -->
 
 
-        <!-- Footer content här -->
+    <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
 
 
-        <!--<div class="footer-banner">
+    <!-- Footer content här -->
+
+
+    <!--<div class="footer-banner">
         <button id="searchBtn">Sök</button>
     </div> -->
-        <script src="generator.js"></script>
+    <script src="generator.js"></script>
 
 </body>
 
