zigzag divider hos matgeneratorn

--- a/generator.html
+++ b/generator.html
@@ -176,7 +176,7 @@
 
     <!-- Divider efter första kategorin och före den andra kategorin -->
     <div class="divider-container">
-        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/zigzag.svg" alt="Divider" class="divider-image" />
     </div>
 
     <div class="category-header">
@@ -221,7 +221,7 @@
     </div>
 
     <div class="divider-container">
-        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/zigzag.svg" alt="Divider" class="divider-image" />
     </div>
 
     <div class="category-header">
