--- a/startsida2.html
+++ b/startsida2.html
@@ -81,8 +81,8 @@
                         Artiklar
                     </span>
                 </a>
-                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
-                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
+                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger-articles" /> <!-- Uppdaterat ID -->
+                <label class="nav__submenu-trigger-finger" for="submenu-trigger-articles"></label> <!-- Uppdaterat för-attribut -->
                 <ul class="nav__list-child">
                     <li class="nav__item">
                         <a href="/artiklar/halsa/halsa.html" class="nav__link">
