--- a/startsida2.html
+++ b/startsida2.html
@@ -85,7 +85,7 @@
                 <label class="nav__submenu-trigger-finger" for="submenu-trigger-articles"></label> <!-- Uppdaterat för-attribut -->
                 <ul class="nav__list-child">
                     <li class="nav__item">
-                        <a href="/artiklar/halsa/halsa.html" class="nav__link">
+                        <a href="artiklar/halsa/halsa.html" class="nav__link">
                             <span class="nav__text">
                                 Hälsa
                             </span>
