--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
     <!-- Huvudtaggar här -->
-    <link rel="stylesheet" href="articles/articles-style.css">
+    <link rel="stylesheet" href="/artiklar/articles.css">
     <title>Hälsa Artiklar</title>
 </head>
 <body>
