--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -3,12 +3,12 @@
 <head>
     <!-- Huvudtaggar här -->
     <link rel="stylesheet" href="/artiklar/articles.css">
-    <title>Hälsa Artiklar</title>
+    <title>Hälsa - Artiklar</title>
 </head>
 <body>
     <!-- Navigering här -->
     <div class="category-container">
-        <h1>Hälsa Artiklar</h1>
+        <h1>Hälsa - Artiklar</h1>
         <div class="subcategories">
             <a href="#frukostar">Frukostar</a>
             <a href="#middagar">Middagar</a>
